--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>NANJING EXCEL</title>
+    <title>我的个人网站</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,8 +19,8 @@
 </head>
 <body>
     <h1>你好，世界！</h1>
-    <p>WELCOME TO NANJING EXCEL</p>
-    <p>Working in progress...</p>
+    <p>这是我的第一个 GitHub Pages 网站！</p>
+    <p>🚀 成功部署！</p>
     <!-- 你可以在这里添加更多内容，比如图片、链接等 -->
 </body>
 </html>
