--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </head>
 <body>
     <h1>你好，世界！</h1>
-    <p>这是我的第一个 GitHub Pages 网站！</p>
-    <p>🚀 成功部署！</p>
+    <p>WELCOME TO NANJING EXCEL</p>
+    <p>🚀 Work in progress...</p>
     <!-- 你可以在这里添加更多内容，比如图片、链接等 -->
 </body>
 </html>
